import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'@supports (color: oklch(60% 0.2 20)) {}',
		'@supports (background: linear-gradient(red, blue)) {}',
		'@supports (width: clamp(1px, 2vw, 3px)) {}',
		'@supports (transform: rotateX(30deg)) {}',
		'@supports (--probe: red) {}',
		'@supports (--probe: 1cqi) {}',
		'@supports (--probe: stretch) {}',
		'@supports (--probe: var(--value)) {}',
		'@supports (color: var(--brand)) {}',
		'@supports (color: var(--brand, red)) {}',
		'@supports (color: var(--brand, var(--fallback, red))) {}',
		'@supports (color: var(--brand)) and (color: oklch(60% 0.2 20)) {}',
		'@supports (width: env(safe-area-inset-left, 0px)) {}',
		'@supports (--probe: attr(data-width type(<length>))) {}',
		'@supports (--probe: if(supports(color: oklch(60% 0.2 20)): red; else: blue)) {}',
		'@supports (--probe: if(media(width > 1px): red; else: blue)) {}',
		'@supports (--probe: if(style(--color: oklch(60% 0.2 20)): red; else: blue)) {}',
		'@supports (--probe: first-valid(red, blue)) {}',
		'@supports (--probe: --value()) {}',
		'@supports (--probe: theme(colors.brand)) {}',
		'@supports (--probe: theme(oklch(var(--brand)))) {}',
		'@supports (--brand: future-color(red)) {}',
		'@supports (--probe: "oklch(60% 0.2 20)") {}',
		'@supports (--probe: url("oklch(60% 0.2 20)")) {}',
		'@supports (--probe: url(oklch.png)) {}',
		'@supports (--probe: red /* oklch(60% 0.2 20) */) {}',
		'@supports selector(:has(a)) {}',
		'@supports (color: red) { a { --brand: oklch(60% 0.2 20); color: oklch(var(--lightness) 0.2 20); } }',
		'@container style(--brand: oklch(60% 0.2 20)) {}',
		'@media (--brand: oklch(60% 0.2 20)) {}',
		'@import "theme.css" supports(color: oklch(60% 0.2 20));',
		'@import url("theme.css") supports((--probe: red));',
		'@import "theme.css" supports(color: var(--brand, red));',
		'@import "theme.css" supports(selector(:has(a)));',
		'@import "theme.css" screen;',
		'@import "theme.css" layer(theme) supports(color: oklch(60% 0.2 20)) screen and (width > 1px);',
		'@supports (color: var(--brand, "oklch(60% 0.2 20)")) {}',
		'@supports (background: var(--image, url("oklch.png"))) {}',
		String.raw`@supports (color: \\var(--brand, oklch(60% 0.2 20))) {}`,
		String.raw`@supports (color: \\var(--brand) oklch(60% 0.2 20)) {}`,
		'@supports-condition --modern-color { color: oklch(60% 0.2 20); }',
		'@supports-condition --probes { --probe: red; color: var(--brand); color: oklch(60% 0.2 20); }',
		'@supports-condition --theme { --probe: theme(oklch(60% 0.2 20)); }',
		'@supports-condition --empty {}',
		'@supports-condition --nested { a { --brand: oklch(60% 0.2 20); color: oklch(var(--lightness) 0.2 20); } }',
	],
	invalid: [
		'@supports (--brand: oklch(60% 0.2 20)) {}',
		'@supports (--brand: rgb(0 0 0)) {}',
		'@supports (--background: linear-gradient(red, blue)) {}',
		'@supports (--size: clamp(1px, 2vw, 3px)) {}',
		'@supports (--size: calc(1px + 2px)) {}',
		'@supports (--size: min(1px, max(2px, 3px))) {}',
		'@supports (--size: calc(1px + 2px) !important) {}',
		'@supports (color: oklch(var(--lightness) 0.2 20)) {}',
		'@supports (background: linear-gradient(var(--stops))) {}',
		'@supports (width: calc(var(--width) + 1px)) {}',
		'@supports (color: var(--brand, oklch(60% 0.2 20))) {}',
		'@supports (--brand: var(--color, oklch(60% 0.2 20))) {}',
		'@supports (color: var(--brand, var(--fallback, oklch(60% 0.2 20)))) {}',
		'@supports (width: calc(env(safe-area-inset-left) + 1px)) {}',
		'@supports (width: calc(attr(data-width px) + 1px)) {}',
		'@supports (--probe: oklch(attr(data-lightness type(<number>)) 0.2 20)) {}',
		'@supports (--probe: attr(data-color type(<color>), oklch(60% 0.2 20))) {}',
		'@supports (--probe: if(supports(color: oklch(60% 0.2 20)): oklch(60% 0.2 20); else: blue)) {}',
		'@supports (--probe: if(supports(color: oklch(60% 0.2 20)): red; else: rgb(0 0 0))) {}',
		'@supports (color: first-valid(oklch(60% 0.2 20), red)) {}',
		'@supports (width: calc(--size() + 1px)) {}',
		'@SUPPORTS (--BRAND: OKLCH(60% 0.2 20)) {}',
		'@supports (COLOR: OKLCH(VAR(--lightness) 0.2 20)) {}',
		'@supports not (--brand: oklch(60% 0.2 20)) {}',
		'@supports ((--brand: oklch(60% 0.2 20)) and (display: grid)) {}',
		'@supports (--brand: oklch(60% 0.2 20)) or (--size: clamp(1px, 2vw, 3px)) {}',
		'@supports (--probe: oklch(60% 0.2 20) rgb(0 0 0)) {}',
		'@supports (--probe: theme((nested(oklch(60% 0.2 20)))) clamp(1px, 2vw, 3px)) {}',
		'@supports (width: var(--size, theme((nested(clamp(1px, 2vw, 3px))))) calc(1px + 2px)) {}',
		'@supports (--brand: /* keep */ oklch(60% 0.2 20) /* keep */) {}',
		'@property --brand { syntax: "<color>"; inherits: false; initial-value: red; } @supports (--brand: oklch(60% 0.2 20)) {}',
		'@supports (--brand: oklch(60% 0.2 20)) {} @property --brand { syntax: "<color>"; inherits: false; initial-value: red; }',
		...['@media screen', '@supports (display: grid)', '@container (width > 1px)', '@layer theme', '@scope (.theme)', 'a'].map(parent => `${parent} { @supports (--brand: oklch(60% 0.2 20)) {} }`),
		'@import "theme.css" supports(--brand: oklch(60% 0.2 20));',
		'@import url("theme.css") supports((--brand: oklch(60% 0.2 20)));',
		'@import "theme.css" supports(color: var(--brand, oklch(60% 0.2 20)));',
		'@IMPORT "theme.css" SUPPORTS(--BRAND: OKLCH(60% 0.2 20));',
		'@import "theme.css" supports((--brand: oklch(60% 0.2 20)) and (width: calc(var(--size) + 1px)));',
		'@supports (--transform: rotateX(30deg)) {}',
		'@supports (--transform: SCALEY(2)) {}',
		'@supports (transform: translatez(var(--depth))) {}',
		String.raw`@supports (color: oklch(v\61 r(--lightness) 0.2 20)) {}`,
		'@import "theme.css" layer(theme) supports(--brand: oklch(60% 0.2 20)) screen and (width > 1px);',
		'@import "theme.css" layer(theme) supports((--brand: oklch(60% 0.2 20))) screen and (width > 1px);',
		{
			code: '@supports (--brand: future-color(red)) {}',
			languageOptions: {customSyntax: {types: {'future-color()': 'future-color( <color> )'}}},
		},
		'@supports-condition --modern-color { --brand: oklch(60% 0.2 20); }',
		'@supports-condition --modern-color { color: oklch(var(--lightness) 0.2 20); }',
		'@supports-condition --modern-color { color: var(--brand, oklch(60% 0.2 20)); }',
		'@SUPPORTS-CONDITION --modern-color { --BRAND: OKLCH(60% 0.2 20); }',
		'@supports-condition --modern { --brand: oklch(60% 0.2 20); width: calc(var(--size) + 1px); }',
		'@media screen { @supports-condition --modern-color { --brand: oklch(60% 0.2 20); } }',
	],
});

test({
	valid: [],
	invalid: [
		{
			code: '@supports (--brand: oklch(60% 0.2 20)) {}',
			errors: [{messageId: 'no-ineffective-supports-conditions/custom-property', data: {functionName: 'oklch'}}],
		},
		{
			code: '@supports (color: var(--brand, oklch(60% 0.2 20))) {}',
			errors: [{messageId: 'no-ineffective-supports-conditions/substitution', data: {functionName: 'oklch', substitutionName: 'var'}}],
		},
		{
			code: '@supports (width: calc(--Size() + 1px)) {}',
			errors: [{messageId: 'no-ineffective-supports-conditions/substitution', data: {functionName: 'calc', substitutionName: '--Size'}}],
		},
	],
});
